# cube

cube_repo/: CMakeLists.txt  Makefile  cub3D  cube.h  cube_parser.c  cube_parser_utils.c  cube_start.c  empty.cub  err_closed.cub  err_double_player.cub  err_empty_string.cub  err_map_not_cub  map.cub  small.cub  square.cub  validation_of_map.c
cube_repo/Instruments.trace/: form.template
cube_repo/Instruments.trace/Trace1.run/: RunIssues.storedata  event_data_75189.oa
cube_repo/Instruments.trace/Trace2.run/: RunIssues.storedata  event_data_76978.oa
cube_repo/Instruments.trace/Trace3.run/: RunIssues.storedata  event_data_77347.oa
cube_repo/Instruments.trace/Trace4.run/: RunIssues.storedata  event_data_92255.oa
cube_repo/Instruments.trace/Trace5.run/: RunIssues.storedata  event_data_92666.oa
cube_repo/Instruments.trace/Trace6.run/: RunIssues.storedata  event_data_18912.oa
cube_repo/Instruments.trace/Trace7.run/: RunIssues.storedata  event_data_18917.oa
cube_repo/Instruments.trace/Trace8.run/: RunIssues.storedata  event_data_19263.oa
cube_repo/Instruments.trace/Trace9.run/: RunIssues.storedata  (+1 more)
cube_repo/game/: draw_texture.c  draw_utils.c  game_start.c  handle_sprites.c  move_player_logic.c  prep_game.c  render_sprites.c
cube_repo/gnl/: get_next_line.c  get_next_line_utils.c
cube_repo/includes/: cube.h  libft.h
cube_repo/libft/: Makefile  ft_skip_spaces.c  ft_strncmp.c
cube_repo/parser/: cube_parser.c  cube_parser_utils.c  cube_start.c  exit_functions.c  parse_premap.c  parser_logic.c  validation_of_map.c
cube_repo/pics/: WALL104.xpm  vast
(+36 files in other folders)
